[package]
name = "jetmd"
version = "0.1.2"
edition = "2024"
description = "A lightweight Markdown editor"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["markdown", "editor", "gui", "gtk4"]
categories = ["text-editors"]

[dependencies]
gtk4 = { version = "0.10", features = ["v4_10"] }
sourceview5 = "0.10"
webkit6 = "0.5"
pulldown-cmark = "0.13.1"
directories = "6.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.26.0"

[package.metadata.bundle]
name = "jetmd"
identifier = "io.github.ryanyonzon.jetmd"
icon = ["res/icons/1024x1024.png"]
version = "0.1.0"
copyright = "Copyright (c) 2026 Ryan Yonzon"
category = "public.app-category.productivity"
short_description = "A lightweight Markdown editor"
long_description = """
jetmd is a lightweight Markdown editor with live preview built using GTK4.
It supports syntax highlighting, find and replace, and real-time rendered previews.
"""
